@@ -1,0 +1,10 @@
+ - Describe the extension online, probably at vi.mozdev.org.
+ - Optionally remember on/off state per-site, using FUEL or the Content
+   Preferences service. [1] Maybe limit this feature to bookmarks (FUEL), since
+   the UI to set the preferences would be easier to figure out.
+ - The extension has some commented code towards supporting Thunderbird 3a1. The
+   main issues are identifying the myriad of textboxes that AVIM should ignore,
+   and finding a keyboard shortcut for toggling AVIM that won't conflict with
+   any of the shortcuts used on any of Thunderbird's windows.
+
+[1] http://developer.mozilla.org/en/docs/Using_content_preferences
